Tue May 13 01:25:12 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (inet_ntop): Add Win32 inet_pton and inet_aton.

	* src/gnet-private.c (DllMain): Comment out DestroyWindow.  This
	   causes problems.  Andy will take a look at it.

	* src/gnet-private.h: Define IN_LOOPBACKNET if not defined
	   (like in Windows?)

	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): Add a &
	   (was bad cast).
	
	* src/inetaddr.c (gnet_inetaddr_new_list_async): s/name/hostname,
	   Fix list code.  Delete list.

	* src/gnet-private.c (gnet_MainCallBack): Use
	   GInetAddrNewListState (a rename)

Sun May 11 22:31:59 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Use ias, not ia (Win32).  Clean-up list code.

	* src/gnet-private.h (struct _GUnixSocket): ifdef out
	   for Win32 compile.

Tue May  6 12:27:07 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_gethostbyname): Fix memory leak?
	    Call freeaddrinfo on res if res it set, regardless of
	    there being an error.  I'm not sure if this fixes anything.
	
Tue May  6 11:44:33 2003  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_connect_inetaddr_cb): 
	   Don't delete the addresses in state.  The get deleted
	   when we call cancel.

Tue Apr 29 13:57:43 2003  David Helder  <dhelder@umich.edu>

	* README (Features): Remove GnomeICU

Tue Apr 29 12:23:34 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Fix AC_INIT version.

Mon Apr 28 12:32:55 2003  David Helder  <dhelder@umich.edu>

	* configure.ac (GNET_BINARY_AGE): version++
	* gnet.pc.in, src/?: Sun compiler patch from Ives Aerts
	* gnet.spec.in: Fixes from Bas Mevissen

Mon Apr 21 18:22:07 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Update version for 2.0.1

Thu Apr 17 17:52:20 2003  David Helder  <dhelder@umich.edu>

	* tests/inetaddr_test.c (main): More IPv6 fixes.
	* configure.ac: Check for -pthreads (alternative to -pthread)

Wed Apr 16 15:21:21 2003  David Helder  <dhelder@umich.edu>
