@@ -134,12 +134,16 @@ eDonkey2000 GTK frontend
   http://ed2k-gtk-gui.sourceforge.net
 
 Gabber			
-  messaging/chat program
+  instant messaging and chat
   http://gabber.sourceforge.net
 
 Gnome Chinese Checkers
   board game
   http://gchch.sourceforge.net/
+
+Gnome Jabber
+  instant messaging and chat
+  http://gnome-jabber.sourceforge.net
 
 Jungle Monkey	 	
   distributed file sharing program
